[gd_scene load_steps=5 format=3 uid="uid://b5m7tefmcwl7h"]

[ext_resource type="Script" uid="uid://bud37ul0hojla" path="res://spaceship.gd" id="1_7g3nn"]
[ext_resource type="Texture2D" uid="uid://lqwhwkeju5as" path="res://shuttle.png" id="2_pmkdn"]
[ext_resource type="Texture2D" uid="uid://b8yvdac86tyi1" path="res://sprites/flame-sheet.png" id="3_pmkdn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51qc7"]
size = Vector2(24, 45)

[node name="Spaceship" type="CharacterBody2D"]
script = ExtResource("1_7g3nn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_51qc7")

[node name="Ship" type="Sprite2D" parent="."]
texture = ExtResource("2_pmkdn")

[node name="FireRight" type="Sprite2D" parent="Ship"]
z_index = -1
position = Vector2(0, 34)
rotation = -3.14159
texture = ExtResource("3_pmkdn")
hframes = 4

[node name="LeftFin" type="Polygon2D" parent="Ship"]
z_index = -1
position = Vector2(-20, 19)
rotation = -1.5708
scale = Vector2(0.6, 0.6)
color = Color(0.472025, 0.472025, 0.472025, 1)
polygon = PackedVector2Array(-8, -4, 8, -4, 21.2066, -8.01062, 1, -21, -16, -18)

[node name="RightFin" type="Polygon2D" parent="Ship"]
z_index = -1
position = Vector2(19, 19)
rotation = -0.563741
scale = Vector2(-0.6, 0.6)
color = Color(0.472025, 0.472025, 0.472025, 1)
polygon = PackedVector2Array(-8, -4, 8, -4, 21.2066, -8.01062, 1, -21, -16, -18)

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 0.14
drag_vertical_offset = 0.17
